[package]
name = "tkern"
version = "0.1.0"
authors = ["Tim Langford <tim.langford@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
volatile = "0.2.6"
bootloader = "0.6.4"
spin = "0.4.9"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]